--- a/style.css
+++ b/style.css
@@ -28,6 +28,6 @@ color: red;
 }
 
 .img {
-background-image: url("https://raw.githubusercontent.com/TheCheeper/TheCheeper.github.io/master/RedCrystalSword.jpg");
-background-size: cover
+text-align: center;
+ border: 2px;
 }
