--- a/blog.css
+++ b/blog.css
@@ -18,7 +18,7 @@ text-align: center;
 }
 
 .container {
-background-color: darkBlue;
+background-color: Blue;
 border: 2px;
 border-style: solid;
 border-color: lightGray;
