--- a/style.css
+++ b/style.css
@@ -12,7 +12,7 @@ color: red;
   padding: 20px;
   margin-bottom: 15px;
   text-align: center;
-  background-color: lightGray;
+  background-image: url("https://raw.githubusercontent.com/TheCheeper/TheCheeper.github.io/master/A7C01ACA-CF7D-4201-A4FB-11C756D4CB3D-2535-000004D0A7E07751_tmp.png");
 }
 
 nav li {
