--- a/blog.css
+++ b/blog.css
@@ -1,11 +1,7 @@
-.posts p {
-background: DeepSkyBlue;
-text-align: center;
-}
 
-h1 {
+.nav h1 {
   color: RGB(243, 23, 45);
-  text-align: center;
+  text-align: left;
 }
 
 .heading {
@@ -18,22 +14,19 @@ text-align: center;
 }
 
 .container {
-background-color: Blue;
-border: 2px;
-border-style: solid;
-border-color: lightGray;
+background-image: url("https://raw.githubusercontent.com/TheCheeper/TheCheeper.github.io/master/A7C01ACA-CF7D-4201-A4FB-11C756D4CB3D-2535-000004D0A7E07751_tmp.png");
+background-size: cover;
 }
 
 
-nav li {
-display: block;
-color: gray;
+.nav a {
+display: flex;
+color: aqua;
 }
 
 .footer {
-  background-color: darkGray;
-  border: 3px;
-  border-style: solid;
+  background-color: linear-gradient(lightGray, darkGray);
+  color: gray;
 }
 
 
