--- a/style.css
+++ b/style.css
@@ -8,16 +8,15 @@ color: red;
 
 .img {
 background-image: url("https://raw.githubusercontent.com/TheCheeper/TheCheeper.github.io/master/A7C01ACA-CF7D-4201-A4FB-11C756D4CB3D-2535-000004D0A7E07751_tmp.png");
-background-size: cover;
+text-align: center;
 }
 
 
 
 .nav {
   text-align: left;
-  display: flex;
- flex-wrap: wrap;
- background-color: linear-gradient(orange, darkOrange);
+  display: inline;
+ background-color: orange;
 }
 
 .footer li {
