--- a/articles/style.css
+++ b/articles/style.css
@@ -51,3 +51,17 @@ border-style: solid;
 border-color: lightGray;
 }
 
+.article-1 {
+background-color: lightGray;
+border: 2px;
+border-style: outset;
+}
+
+
+.article-2 {
+background-color: lightGray;
+border: 2px;
+border-style: outset;
+}
+
+
